2002-06-03 Araki Ken <arakiken@users.sf.net>

	* multi-column characters were not treated as multi-column in UTF-8 encoding. fixed.
	  (Thanks to Sakamoto Hironori san)
	* If Control Mask is set, mouse position is not reported.
	  (Thanks to Sakamoto Hironori san)
	* mlconfig and mlterm communicate through doc/en/PROTOCOL protocol.

2002-05-31 Tomohiro KUBOTA <kubota@debian.org>

	* rewrite manpage for 2002-05-30 changes.

2002-05-30 Araki Ken <arakiken@users.sf.net>

	* string to be output can be defined in ~/.mlterm/key like
	  Control+F1="foobar".
	* rgb of highlighted 8 colors can be defined as hl_{black|white|...} 
	  in ~/.mlterm/color.

2002-05-26 Tomohiro KUBOTA <kubota@debian.org>

	* rewrite help message ("mlterm --help").
	* rewrite help message of ./configure script.

2002-05-20 Araki Ken <arakiken@users.sf.net>

	* VPATH was wrong in mlterm/Makefile.in xwindow/Makefile.in. fixed.
	  (Thanks to Nakada Nobuyoshi san)

2002-05-19 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_color.c: alloc_closest_xcolor_pseudo() doesn't free the memory space
	  pointed to by all_colors. fixed.

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* auto pointer was passed to putenv(). fixed.
	  (Thanks to Nakada Nobuyoshi san)

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* display name specified by --display overwrites DISPLAY environment variable.

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* combining characters were not shown with both -bi and -m options. fixed.

2002-05-19 Araki Ken <arakiken@users.sf.net>

	* Unicode characters except 0x00-0x7f could be shown incorrectly. fixed.

2002-05-19 Tomohiro KUBOTA <kubota@debian.org>

	* manpage update: explanations for -H, -J, -Q, -Z, and -q are
	  vastly modified.  Added a chapter of DAEMON MODE.  Keys which
	  are available only in -q mode are noted.
	* Added a new manpage of mlclient.1 .  (man/Makefile.in is also
	  modified to install this new page.)

2002-05-19 Araki Ken <arakiken@users.sf.net>
