@@ -1,14 +1,14 @@
-black		BLACK
-red		RED
-green		GREEN
-yellow		YELLOW
-blue		BLUE
-magenta		MAGENTA
-cyan		CYAN
-white		WHITE
-gray		GRAY
-lightgray	LIGHTGRAY
-pink		PINK
-brown		BROWN
-priv_fg		PRIVATE_FG
-priv_bg		PRIVATE_BG
+black		black
+red		red
+green		green
+yellow		yellow
+blue		blue
+magenta		magenta
+cyan		cyan
+white		white
+gray		gray
+lightgray	lightgray
+pink		pink
+brown		brown
+priv_fg		private_fg
+priv_bg		private_bg
