@@ -1,1 +1,0 @@
-wall_picture	text	-	0
